[1.0.0] added tests, eslint, verified functionality further

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,7 +2,10 @@ env:
   browser: true
   commonjs: true
   es6: true
+  node: true
 extends: 'eslint:recommended'
+parserOptions:
+  ecmaVersion: 2017
 rules:
   indent:
     - error
