--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "sane"
   ],
   "author": "Charles T. Wall III",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "ava": "^0.22.0",
+    "puppeteer": "^0.10.2"
+  },
+  "dependencies": {
+    "fs-promise": "^2.0.3"
+  }
 }
