--- a/package.json
+++ b/package.json
@@ -18,7 +18,5 @@
     "ava": "^0.22.0",
     "puppeteer": "^0.10.2"
   },
-  "dependencies": {
-    "fs-promise": "^2.0.3"
-  }
+  "dependencies": { }
 }
